# dazzlesum

./: .flake8  .gitignore  .gitkeep  .repokit.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  dazzlesum.py  install-hooks.sh  pyproject.toml  requirements.txt  setup.py
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md  release-template.md  stale.yml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md
.github/workflows/: main.yml  python.yml
docs/: command-reference.md  file-formats.md  installation.md  shadow-directory.md  usage-examples.md
hooks/: README.md  pre-commit
private/claude/: 2025-06-26__17-29-30__project-analysis.md  2025-06-26__17-30-47__logging-system-design.md  2025-06-26__17-37-00__verify-improvements-design.md  2025-06-26__17-38-48__movement-detection-design.md  2025-06-26__17-52-33__implementation-synthesis.md  2025-06-26__17-55-57__implementation-synthesis-updated.md  2025-06-26__19-38-04__post-mortem-analysis.md  2025-06-26__22-24-27__dual-mode-checksum-design.md  2025-06-27__07-43-55__session-summary-and-shasum-management.md  2025-06-27__08-31-16__shadow-directory-and-command-redesign.md  2025-06-27__08-48-02__dazzlesum-github-deployment-plan.md
scripts/: check_lint.sh  check_tests.sh  install-hooks.sh
scripts/hooks/: pre-push
tests/: __init__.py  run_tests.py  test_basic.py  test_cli.py  test_monolithic_autodetection.py  test_monolithic_verification.py  test_shadow_directory.py  test_squelch_and_grand_totals.py  test_verbosity_system.py  test_verify_integration_autodetection.py  test_versioning.py
tests/one-offs/: debug_cli_test.py  debug_monolithic_test.py  debug_verbosity_test.py  test_colors.py  test_extra_filtering_issue.py  test_extra_with_shasum.py  test_level_4_comprehensive.py  test_level_4_force_summary.py  test_success_directories.py  test_success_with_extras_fix.py  test_verify_output.py  test_windows_colors.py  windows_color_test.md
