[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dazzlesum"
dynamic = ["version"]
description = "A cross-platform file checksum utility with DOS compatibility and advanced verification features"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "Dustin Darcy", email = "6962246+djdarcy@users.noreply.github.com"}
]
keywords = ["checksum", "hash", "verification", "sha256", "cross-platform", "dos-compatible"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/djdarcy/dazzlesum"
"Bug Reports" = "https://github.com/djdarcy/dazzlesum/issues"
"Source" = "https://github.com/djdarcy/dazzlesum"
"Documentation" = "https://github.com/djdarcy/dazzlesum#readme"

[project.scripts]
dazzlesum = "dazzlesum:main"

[project.optional-dependencies]
windows = [
    # Enhanced Windows UNC path support
    # "git+https://github.com/djdarcy/UNCtools.git",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0;python_version>='3.8'",
    "black==23.3.0;python_version=='3.7'",  # Last version supporting Python 3.7
    "flake8>=5.0.0;python_version=='3.7'",  # Max version for Python 3.7
    "flake8>=6.0.0;python_version>='3.8'",
    "mypy>=1.0.0",
]

[tool.setuptools]
py-modules = ["dazzlesum"]

[tool.setuptools.dynamic]
version = {attr = "dazzlesum.get_package_version"}